# cpp_flutter

./: .gitignore  README.md  ffigen.yaml  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/jp/cordea/cpp_flutter/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: component.dart  home.dart  main.dart  main_bindings_generated.dart
src/: CMakeLists.txt  main.cpp  main.h
test/: widget_test.dart
